--- a/packages/theme-chalk/src/index.css
+++ b/packages/theme-chalk/src/index.css
@@ -3,3 +3,6 @@
 
 /* components */
 @import url('./button.css');
+@import url('./collapse.css');
+@import url('./collapse-item');
+@import url('./icon');
