--- a/packages/theme-chalk/src/button.css
+++ b/packages/theme-chalk/src/button.css
@@ -71,7 +71,6 @@
 
   /* circle */
   &.is-circle {
-    width: 32px;
     padding: 8px;
     border-radius: 50%;
   }
@@ -92,6 +91,11 @@
 
   [class*='mc-icon'] + span {
     margin-left: 6px;
+  }
+
+  .mc-icon {
+    width: 14px;
+    height: 14px;
   }
 }
 
@@ -119,6 +123,9 @@
     --mc-button-hover-bg-color: var(--mc-color-$(val));
     --mc-button-hover-border-color: var(--mc-color-$(val));
     --mc-button-active-text-color: var(--mc-color-white);
+    --mc-button-disabled-bg-color: var(--mc-color-$(val)-light-9);
+    --mc-button-disabled-text-color: var(--mc-color-$(val)-light-5);
+    --mc-button-disabled-border-color: var(--mc-color-$(val)-light-8);
   }
 }
 
@@ -129,6 +136,10 @@
   padding: 12px 19px;
   font-size: var(--mc-font-size-base);
   border-radius: var(--mc-border-radius-base);
+
+  &.is-circle {
+    padding: 12px;
+  }
 }
 
 .mc-button--small {
@@ -138,4 +149,9 @@
   padding: 5px 11px;
   font-size: 12px;
   border-radius: calc(var(--mc-border-radius-base) - 1px);
+
+  &.is-circle {
+    width: auto;
+    padding: 5px;
+  }
 }
