docs(docs、theme-chalk): 新增tooltip文档，修复dropdown文档
新增tooltip文档，修复dropdown文档，修复tooltip样式dark状态下的样式问题

--- a/packages/theme-chalk/src/tooltip.css
+++ b/packages/theme-chalk/src/tooltip.css
@@ -9,6 +9,7 @@
   &.is-dark {
     --mc-popover-text-color: var(--mc-bg-color);
     --mc-popover-bg-color: var(--mc-text-color-primary);
+    --mc-popover-border-color: var(--mc-text-color-primary);
   }
 
   display: inline-block;
